# tensa-launcher

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  dependabot.yml
.tools/: README.md  build.py  build_linux.py  build_macos.py  build_windows.py  clean.py  flet_client.py  icon_assets.py  pre_commit.py  python_runtime.py  release_meta.py  release_notes.py  run_codeql.py  run_compile.py  run_exe_sandbox.ps1  run_launcher.py  run_lint.py  run_tests.py  run_typecheck.py  smoke_packaged.py  validate_commit_message.py
docs/: CODE_SIGNING.md  PRIVACY.md
launcher/: __init__.py  __main__.py  app.py  cli.py  main.py  state.py
tests/: conftest.py  test_app_startup.py  test_async_downloader.py  test_auth_refresh.py  test_build_tool.py  test_build_workflow.py  test_catalog_state.py  test_commit_message.py  test_core_util.py  test_curseforge_manifest.py  test_dependency_pins.py  test_device_ui.py  test_error_reports.py  test_feedback_service.py  test_file_sync_journal.py  test_flet_compat.py  test_game_launch_diagnostics.py  test_game_profile_auth.py  test_installed_components.py  test_java_preferences.py  test_java_runtime.py  test_launch_diagnostics_classifier.py  test_memory_preferences.py  test_microsoft_auth_config.py  test_minecraft_install_retry.py  test_mod_loader_repair.py  test_modrinth_api.py  test_modrinth_mods.py  test_modrinth_pack.py  test_pages_smoke.py  test_pending_update.py  test_profile_builder_expiry.py  test_profile_store_tokens.py  test_release_notes.py  test_setup_wizard.py  (+19 more)
(+155 files in other folders)
